--- a/8. Vertical Slider/index.html
+++ b/8. Vertical Slider/index.html
@@ -15,7 +15,7 @@
             <h1>Nature flower</h1>
             <p>all in pink</p>
           </div>
-          <div style="background-color: #1e424a">
+          <div style="background-color: #2f3e46">
             <h1>Green Trees </h1>
             <p>Near Lake</p>
           </div>
@@ -44,9 +44,6 @@
         </div>
       </div>
   
-
-
-
 
     <script src="script.js"></script>
 </body>
